# david-prime-backend

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md
.github/workflows/: ci.yml
crates/oracle-cli/: Cargo.toml
crates/oracle-cli/src/: main.rs
crates/oracle-hub/: Cargo.toml
crates/oracle-hub/src/: lib.rs
crates/oracle-index/: Cargo.toml
crates/oracle-index/src/: lib.rs
crates/oracle-protocol/: Cargo.toml
crates/oracle-protocol/src/: lib.rs
crates/oracle-serve/: Cargo.toml
crates/oracle-serve/src/: lib.rs
crates/oracle-store/: Cargo.toml
crates/oracle-store/src/: lib.rs
crates/oracle-verify/: Cargo.toml
crates/oracle-verify/src/: lib.rs
docs/: TOOLCHAIN.md
examples/tiny-repo/: README.md
examples/tiny-repo/go/: greet.go
examples/tiny-repo/python/: greet.py
examples/tiny-repo/rust/src/: lib.rs
scripts/: check.sh
