[workspace]
resolver = "2"
members = [
    "crates/oracle-cli",
    "crates/oracle-protocol",
    "crates/oracle-store",
    "crates/oracle-index",
    "crates/oracle-verify",
    "crates/oracle-serve",
    "crates/oracle-hub",
]
exclude = ["examples"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/moranlemusj/david-prime-backend"
authors = ["David Prime contributors"]
rust-version = "1.74"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
