[package]
name = "oracle-cli"
description = "Command-line interface for the David Prime Oracle Protocol."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "oracle"
path = "src/main.rs"

[dependencies]
