[package]
name = "oracle-hub"
description = "Per-user federation hub: registry, supervisor, MCP proxy, access policy (SPEC §5)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
