[package]
name = "oracle-index"
description = "Repo → oracle-artifact pipeline: tree-sitter span extraction, SCIP reference resolution, embeddings."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
