[package]
name = "oracle-protocol"
description = "Wire types and JSON schemas for the David Prime Oracle Protocol v0.1."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
