[package]
name = "oracle-serve"
description = "MCP server (stdio + streamable-HTTP) for a single David Prime oracle artifact."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
