[package]
name = "oracle-store"
description = "SQLite-backed read/write helpers for David Prime oracle artifacts."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
