[package]
name = "oracle-verify"
description = "Cite-or-refuse verifier (SPEC §7.1.1) with pluggable LLM composer (Gemini default)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
